SonarQube problems fix